adjusted the margin at index.html, main.css

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
   <div class="text">
     <div class="row">
-      <!-- <div class="column">
-        <img src="./img/dump.jpg" alt="">
-      </div> -->
+      <div class="column">
+        <!-- <img src="./img/dump.jpg" alt=""> -->
+      </div>
       <div class="column">
         <p id="overlap">Willkommen zum Wok Show . <br> Dumplings sind ein Klassiker in der chinesischen Küche.</p>
       </div>
