--- a/reservierung.html
+++ b/reservierung.html
@@ -34,7 +34,7 @@
           <h2>Reservierung</h2>
           <h3>Swing by for Dumplings, or leave us a message:</h3>
         </div>
-        <img src="./img/bg.jpg" style="width:100%">
+        <img src="./img/dump3.jpg" style="width:100%">
       </div>
       <div class="column">
         <form>
