adjusted reservierung page

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <li><a href="speisekarte.html">Speisekarte</a></li>
       <li><a href="reservierung.html">Reservierung</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
+      <li><i class="fab fa-instagram" style="width:30px; height:30px;"></i></li>
+      <li><i class="fab fa-facebook-square"></i></li>
     </ul>
   </header>
 
