--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Dekko&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="kontakt.css">
   <title>Wok Show</title>
 
 </head>
@@ -25,32 +25,31 @@
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </header>
-
-  <div class="row">
-    <div class="column kontaktColumn">
-      <h2>Kontakt Info</h2>
-      <a href="https://goo.gl/maps/oaSf1Mk3sq21t1Nu9"><i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span></a>
-      <br><br>
-      <a href="tel:03043911857"><i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span></a>
-      <br>
-      <h2 class="kontakt">Öffnungszeiten</h2>
-      <i class="far fa-clock"></i>
-      <span class="kontakt">Montag-Donnerstag: 17:00-22:30</span>
-      <br><br>
-      <i class="far fa-clock"></i>
-      <span class="kontakt">Freitag-Sonntag: 12:30-22:30</span>
-      <p>Sollten Sie noch weitere Fragen haben,stehen wir Ihnen gerne zur Verfügung.</p>
+  <div class="text">
+    <br><br><br>]
+    <div class="row">
+      <div class="column kontaktColumn ">
+        <h2>Kontakt Info</h2>
+        <a href="https://goo.gl/maps/oaSf1Mk3sq21t1Nu9"><i class="fas fa-map-marker-alt"></i><span class="kontakt">Greifenhagener Str. 31, 10437 Berlin</span></a>
+        <br><br>
+        <a href="tel:03043911857"><i class="fas fa-phone-volume"></i><span class="kontakt">03043911857</span></a>
+        <br>
+        <h2 class="kontakt">Öffnungszeiten</h2>
+        <i class="far fa-clock"></i>
+        <span class="kontakt">Montag-Donnerstag: 17:00-22:30</span>
+        <br><br>
+        <i class="far fa-clock"></i>
+        <span class="kontakt">Freitag-Sonntag: 12:30-22:30</span>
+        <p>Sollten Sie noch weitere Fragen haben,stehen wir Ihnen gerne zur Verfügung.</p>
+      </div>
+      <div class="column">
+        <img class="kontaktimg" src="./img/Wokshow_02.jpg" alt="">
+      </div>
     </div>
-
-    <div class="column">
-      <img class="kontaktimg" src="./img/Wokshow_02.jpg" alt="">
+    <div class="footer">
+      <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
     </div>
-  </div>
-
-  <div class="footer">
-    <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
-  </div>
-  <!-- </div> -->
+    <!-- </div> -->
 </body>
 
 </html>
