finished simple html pages

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
       <li><a href="speisekarte.html">Speisekarte</a></li>
       <li><a href="reservierung.html">Reservierung</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
-      <li><i class="fab fa-instagram" style="width:30px; height:30px;"></i></li>
-      <li><i class="fab fa-facebook-square"></i></li>
     </ul>
   </header>
 
@@ -58,7 +56,10 @@
 
     </div>
     <div class="footer">
-      <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
+      <p>© 2019 – WokShow. Alle Rechte vorbehalten. |
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+      </p>
     </div>
 </body>
 
