--- a/kontakt.html
+++ b/kontakt.html
@@ -47,7 +47,10 @@
       </div>
     </div>
     <div class="footer">
-      <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
+      <p>© 2019 – WokShow. Alle Rechte vorbehalten. |
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+      </p>
     </div>
     <!-- </div> -->
 </body>
