--- a/philosophie.html
+++ b/philosophie.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="philosophie.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <title>Wok Show</title>
 
 </head>
@@ -42,7 +43,10 @@
     </div>
 
     <div class="footer">
-      <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
+      <p>© 2019 – WokShow. Alle Rechte vorbehalten. |
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-square"></i>
+      </p>
     </div>
 </body>
 
