--- a/speisekarte.html
+++ b/speisekarte.html
@@ -4,6 +4,7 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Dekko&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
   <link rel="stylesheet" type="text/css" href="speisekarte.css">
   <title>Wok Show</title>
@@ -95,7 +96,10 @@
 
 
   <div class="footer">
-    <p>© 2019 – WokShow. Alle Rechte vorbehalten.</p>
+    <p>© 2019 – WokShow. Alle Rechte vorbehalten. |
+      <i class="fab fa-instagram"></i>
+      <i class="fab fa-facebook-square"></i>
+    </p>
   </div>
   <!-- </div> -->
 </body>
