--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Dekko&display=swap" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="kontakt.css">
+  <link rel="stylesheet" type="text/css" href="./css/kontakt.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+
   <title>Wok Show</title>
 
 </head>
@@ -19,12 +21,12 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <!-- <li><a href="philosophie.html">Philosophie</a></li> -->
       <li><a href="speisekarte.html">Speisekarte</a></li>
       <li><a href="reservierung.html">Reservierung</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
     </ul>
   </header>
+
   <div class="text">
     <br><br><br>]
     <div class="row">
@@ -46,13 +48,13 @@
         <img class="kontaktimg" src="./img/Wokshow_02.jpg" alt="">
       </div>
     </div>
+
     <div class="footer">
       <p>© 2019 – WokShow. Alle Rechte vorbehalten. |
         <i class="fab fa-instagram"></i>
         <i class="fab fa-facebook-square"></i>
       </p>
     </div>
-    <!-- </div> -->
 </body>
 
 </html>
