--- a/speisekarte.html
+++ b/speisekarte.html
@@ -5,8 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Dekko&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-  <!-- <link rel="stylesheet" type="text/css" href="main.css"> -->
-  <link rel="stylesheet" type="text/css" href="speisekarte.css">
+  <link rel="stylesheet" type="text/css" href="./css/speisekarte.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
+
   <title>Wok Show</title>
 
 </head>
@@ -20,7 +21,6 @@
     <input class="menu-btn" type="checkbox" id="menu-btn" />
     <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
     <ul class="menu">
-      <!-- <li><a href="philosophie.html">Philosophie</a></li> -->
       <li><a href="speisekarte.html">Speisekarte</a></li>
       <li><a href="reservierung.html">Reservierung</a></li>
       <li><a href="kontakt.html">Kontakt</a></li>
@@ -83,7 +83,6 @@
             <p>Soja Tofu,Gemüse 6.9&euro;</p>
             <p>Soja Tofu,Reisnudeln,Gemüse 7.9&euro;</p>
             <p>Soja Tofu,Bohnen,Gemüse 8.9&euro;</p>
-            <p>Soja Tofu,Kartoffeln,Gemüse 8.9&euro;</p>
             <hr>
             <p>Gebraten</p>
             <p>Gedämpft</p>
@@ -93,15 +92,12 @@
       <p class="dumplings">Vegane Dumplings</p>
     </div>
   </div>
-
-
   <div class="footer">
     <p>© 2019 – WokShow. Alle Rechte vorbehalten. |
       <i class="fab fa-instagram"></i>
       <i class="fab fa-facebook-square"></i>
     </p>
   </div>
-  <!-- </div> -->
 </body>
 
 </html>
